--- a/index.html
+++ b/index.html
@@ -4,37 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="container">
         <div>
-            <button class="btn btn-primary">
+            <button class="btn btn-primary mt-5 ml-3" id="new-book">
                 New Book
             </button>
         </div>
-        <div class="mt-4 mb-5 p-5 h-25">
+        <div class="mt-4 mb-5 p-5 h-25 border w-25 book-div" id="book-modal">
+          <form class="" action="index.html" method="post">
+
             <label for="title">
                 Title
             </label>
-            <input type="text" name="title" id="book-title">
+            <input type="text" name="title" id="book-title" class="mb-2"><br>
             <label for="author">
                 Author
             </label>
-            <input type="text" name="author" id="book-author">
+            <input type="text" name="author" id="book-author" class="mb-2"><br>
             <label for="pages">
                 Pages
             </label>
-            <input type="number" name="pages" id="book-pages">
-            <label for="read">
+            <input type="number" name="pages" id="book-pages" class="mb-2"><br>
+            <label for="read" class="text-center">
                 Read Status
-            </label>
-            <input type="radio" name="read" id="read-book">Yes
-            <input type="radio" name="read" id="read-book">No
+            </label><br>
+            <input type="radio" name="read" value="yes">Yes
+            <input type="radio" name="read" value="no" class="ml-2">No
+            <br>
+
+            <button type="submit" name="submit" class="btn btn-primary d-flex mx-auto mt-3" onclick="addBookToLibrary()">Submit</button>
+              </form>
         </div>
-        <div id="book-list" class="d-flex col-md-12 mt-2 p-5">
-        </div>
+        <div id="book-list" class="d-flex row col-lg-12 mt-2 "></div>
     </div>
 </body>
 <script src="main.js"></script>
