--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
             </button>
         </div>
         <div class="mt-4 mb-5 p-5 h-25 border w-25 book-div" id="book-modal">
-          <form class="" action="index.html" method="post">
-
             <label for="title">
                 Title
             </label>
@@ -36,8 +34,7 @@
             <input type="radio" name="read" value="no" class="ml-2">No
             <br>
 
-            <button type="submit" name="submit" class="btn btn-primary d-flex mx-auto mt-3" id="add-book">Submit</button>
-              </form>
+            <button name="submit" class="btn btn-primary d-flex mx-auto mt-3" id="add-book">Submit</button>
         </div>
         <div id="book-list" class="d-flex row col-lg-12 mt-2 "></div>
     </div>
